# Algoritmos

./: .gitignore  BURBUJA.txt  BUSQUEDA_SEQ.txt  FACTORIAL.txt  HANOI.txt  MERGE_SORT.txt  NATURAL.txt  NATURAL.txt.generated.txt  README.md  SUMA_ARREGLO.txt  SUMA_GAUSS.TXT  informe_final.md  pyproject.toml
backend/: .gitignore  GEMINI_SETUP.md  LLM_SETUP.md  README_ENV.md  debug_binary_search.py  pyproject.toml  quicksort_corregido.txt  test_binary_search_best_case.py  test_connection.py  test_gemini_models.py  test_parser.py  test_simple.py
backend/docs/: analysis.md  architecture.md
backend/scripts/: parser_sanity.py
backend/src/: main.py
backend/src/analysis/: __init__.py  complexity_engine.py  cost_model.py  dp_detector.py  dynamic_programming_optimizer.py  environment_manager.py  extractor.py  line_cost_analyzer.py  line_costs.py  pattern_library.py  recurrence_solver.py  (+1 more)
backend/tests/: test_algorithm_keyword.py  test_api.py  test_parser_procedures.py  test_relaxed_blocks_and_comments.py  test_swap_statement.py
docs/: architecture.md
frontend/: index.html  jsconfig.json  mockdata.js  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
src/: main.py
src/analysis/: complexity_engine.py  recurrence_solver.py
src/analyzer/: __init__.py  pipeline.py  reporter.py
src/complexity_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llm/: assistants.py
src/parsing/: ast_nodes.py  lexer.py  parser.py
src/ui/: __init__.py  gui.py
tests/: test_lexer.py  test_pipeline.py
(+37 files in other folders)
